Homepage content integrated

--- a/index.html
+++ b/index.html
@@ -42,5 +42,52 @@
         <a href="#" class="btn btn-branding">Contact me</a>
       </div>
     </div>
+    <p class="text-center m-5">Here are some of my projects</p>
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img
+            src="images/toddler-recipes.png"
+            class="img-fluid"
+            alt="toddler recipes web page image"
+          />
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Toddler recipes progect</h2>
+            <p class="mb-5 text-muted">
+              When it comes to eating habits, toddlers can be hard to predict.
+              Some days they may not eat much. Other days it may seem they are
+              eating all day long. They may want one food every day for weeks,
+              and then suddenly not like it. And how much your child eats may be
+              different from how much another child eats. But do not worry. Your
+              toddler’s unpredictable eating habits are normal.
+            </p>
+            <a href="" class="btn btn-branding-outline"> Learn more </a>
+          </div>
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Weather App</h2>
+            <p class="mb-5 text-muted">
+              Weather is the state of the atmosphere, including temperature,
+              atmospheric pressure, wind, humidity, precipitation, and cloud
+              cover. It differs from climate, which is all weather conditions
+              for a particular location averaged over about 30 years.
+            </p>
+            <a href="" class="btn btn-branding-outline"> Learn more </a>
+          </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img
+            src="images/weather-app.png"
+            class="img-fluid pt-5"
+            alt="weather app image"
+          />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
