Added work page

--- a/work.html
+++ b/work.html
@@ -35,26 +35,29 @@
   </head>
   <body>
     <div class="content-container container">
-      <div class="row">
-        <div class="col-lg-6">
-          <div class="content">
-            <h1 class="mb-4">Hi I am Mariana Koval</h1>
-            <h2 class="mb-4">Frontend Developer, based in Ukraine</h2>
-            <p class="mb-4">
-              For anyone who wants to start learning code, this workshop is very
-              interesting. You will be challenged with different exercises, and
-              everything is well explained, homework and deadlines are good for
-              keep focus
+      <div class="content">
+        <h1 class="mb-5">Take a look at what I've been working on!</h1>
+        <div class="row">
+          <div class="col-md-6 mb-4">
+            <img
+              src="images/recipes.png"
+              class="img-fluid mt-1 recipes-photo"
+              alt="Toddler recipes web-page image"
+            />
+            <h3 class="text-center m-0">Toddler recipes Project</h3>
+            <p class="text-center text-muted">
+              Built with HTML, CSS and JavaScript
             </p>
-            <a href="" class="btn btn-branding">See my projects</a>
           </div>
-        </div>
-        <div class="col-lg-6">
-          <img
-            src="images/mariana.JPG"
-            alt="Mariana photo"
-            class="img-fluid photo"
-          />
+          <div class="col-md-6 mb-4">
+            <img
+              src="images/weather-app.png"
+              class="img-fluid mb-3 weather-photo"
+              alt="Weather app image"
+            />
+            <h3 class="text-center m-0">Weather Project</h3>
+            <p class="text-center text-muted">Built with HTML and CSS</p>
+          </div>
         </div>
       </div>
     </div>
