--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SheCodes Portfolio</title>
+    <meta
+      name="description"
+      content="Mariana in a front-end engineer based in Ukraine"
+    />
+    <title>Front-end developer - Mariana Koval</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -36,7 +40,7 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/">
+        <a href="/" title="Homepage">
           <img
             src="images/logo.png"
             class="logo d-none d-md-block"
@@ -49,10 +53,10 @@
           />
         </a>
         <ul>
-          <li class="active"><a href="/"> Home</a></li>
-          <li><a href="/about.html"> About</a></li>
-          <li><a href="/work.html"> Work</a></li>
-          <li><a href="/contact.html"> Contact</a></li>
+          <li class="active"><a href="/" title="Homepage"> Home</a></li>
+          <li><a href="/about.html" title="About Mariana"> About</a></li>
+          <li><a href="/work.html" title="Mariana's work"> Work</a></li>
+          <li><a href="/contact.html" title="Contact Mariana"> Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -61,7 +65,9 @@
       <h1>Mariana Koval</h1>
       <h2 class="mb-5">Front-end developer based in Ukraine</h2>
       <div>
-        <a href="#" class="btn btn-branding">Contact me</a>
+        <a href="/contact.html" class="btn btn-branding" title="Contact Mariana"
+          >Contact me</a
+        >
       </div>
     </div>
     <p class="text-center m-5">Here are some of my projects</p>
@@ -85,7 +91,9 @@
               different from how much another child eats. But do not worry. Your
               toddler’s unpredictable eating habits are normal.
             </p>
-            <a href="" class="btn btn-branding-outline"> Learn more </a>
+            <a href="/work.html" class="btn btn-branding-outline">
+              Learn more
+            </a>
           </div>
         </div>
       </div>
@@ -99,7 +107,9 @@
               cover. It differs from climate, which is all weather conditions
               for a particular location averaged over about 30 years.
             </p>
-            <a href="" class="btn btn-branding-outline"> Learn more </a>
+            <a href="/work.html" class="btn btn-branding-outline">
+              Learn more
+            </a>
           </div>
         </div>
         <div class="col d-none d-lg-block">
@@ -113,31 +123,55 @@
       <footer>
         <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
           <div>
-            <h4>Work Inquiry</h4>
+            <h3>Work Inquiry</h3>
             <p class="text-muted">Let's work together</p>
           </div>
           <div>
-            <a href="" class="btn btn-branding mt-3">Contact me</a>
+            <a
+              href="/contact.html"
+              class="btn btn-branding mt-3"
+              title="Contact Mariana"
+              >Contact me</a
+            >
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
-          <a href="malto:koval.nkzps@gmail.com" class="email-link">
+          <a
+            href="malto:koval.nkzps@gmail.com"
+            class="email-link"
+            title="Email Mariana"
+          >
             koval.nkzps@gmail.com</a
           >
         </div>
         <div class="social-links d-flex justify-content-center mb-5">
-          <a href="https://www.instagram.com/mariana_ua" target="_blank"
+          <a
+            href="https://www.instagram.com/mariana_ua"
+            target="_blank"
+            title="Instagram Profile"
             ><i class="fa-brands fa-instagram"></i
           ></a>
-          <a href="https://github.com/MarianaVer" target="_blank"
+          <a
+            href="https://github.com/MarianaVer"
+            target="_blank"
+            title="GitHub Profile"
             ><i class="fa-brands fa-github"></i
           ></a>
           <a
             href="https://www.linkedin.com/in/mariana-veropotvelian-587777ab/"
             target="_blank"
+            title="Linkedin Profile"
             ><i class="fa-brands fa-linkedin"></i
           ></a>
         </div>
+        <p class="text-center mt-5">
+          This project was coded by Mariana during SheCodes course, and it is
+          <a
+            href="https://github.com/MarianaVer/portfolio-project"
+            target="_blank"
+            >open-sourced</a
+          >
+        </p>
       </footer>
     </div>
   </body>
