--- a/work.html
+++ b/work.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shecodes Portfolio</title>
+    <meta name="description" content="Mariana's portfolio" />
+    <title>Works of Mariana Koval - Front-end developer from Ukraine</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -34,6 +35,30 @@
     ></script>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/" title="Homepage">
+          <img
+            src="images/logo.png"
+            class="logo d-none d-md-block"
+            alt="logo image"
+          />
+          <img
+            src="images/small-logo.png"
+            class="logo d-block d-md-none"
+            alt="small logo image"
+          />
+        </a>
+        <ul>
+          <li><a href="/" title="Homepage"> Home</a></li>
+          <li><a href="/about.html" title="About Mariana"> About</a></li>
+          <li class="active">
+            <a href="/work.html" title="Mariana's work"> Work</a>
+          </li>
+          <li><a href="/contact.html" title="Contact Mariana"> Contact</a></li>
+        </ul>
+      </nav>
+    </div>
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-5">Take a look at what I've been working on!</h1>
@@ -61,5 +86,58 @@
         </div>
       </div>
     </div>
+    <footer class="container">
+      <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+        <div>
+          <h3>Work Inquiry</h3>
+          <p class="text-muted">Let's work together</p>
+        </div>
+        <div>
+          <a
+            href="/contact.html"
+            class="btn btn-branding mt-3"
+            title="Contact Mariana"
+            >Contact me</a
+          >
+        </div>
+      </div>
+      <div class="d-flex justify-content-center mb-5">
+        <a
+          href="malto:koval.nkzps@gmail.com"
+          class="email-link"
+          title="Email Mariana"
+        >
+          koval.nkzps@gmail.com</a
+        >
+      </div>
+      <div class="social-links d-flex justify-content-center mb-5">
+        <a
+          href="https://www.instagram.com/mariana_ua"
+          target="_blank"
+          title="Instagram Profile"
+          ><i class="fa-brands fa-instagram"></i
+        ></a>
+        <a
+          href="https://github.com/MarianaVer"
+          target="_blank"
+          title="GitHub Profile"
+          ><i class="fa-brands fa-github"></i
+        ></a>
+        <a
+          href="https://www.linkedin.com/in/mariana-veropotvelian-587777ab/"
+          target="_blank"
+          title="Linkedin Profile"
+          ><i class="fa-brands fa-linkedin"></i
+        ></a>
+      </div>
+      <p class="text-center mt-5">
+        This project was coded by Mariana during SheCodes course, and it is
+        <a
+          href="https://github.com/MarianaVer/portfolio-project"
+          target="_blank"
+          >open-sourced</a
+        >
+      </p>
+    </footer>
   </body>
 </html>
